Sonar and PMD test fixes